src/styles/components/procedures.css
.procedures__title {
    margin: 3rem 0;
}

.procedures__cards {
    justify-content: space-between;
    align-items: end;
    flex-wrap: wrap;
}

.card {
    max-width: 365px;
    width: calc((100% - 60px) / 4);
    -webkit-perspective: 900000px;
    perspective: 900000px;
}

.card h2 {
    display: flex;
    justify-content: space-between;
    align-items: end;
    font-size: 1.25rem;
    margin-bottom: 1.5rem;
}

.card h2 span {
    display: inline-block;
}

.card h2 span:last-child {
    width: 250px;
}

.card__image {
    transition: 1s;
    -webkit-transition: 1s;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    width: 100%;
    position: relative;
    -webkit-perspective: 900000px;
    perspective: 900000px;
}

.card__image img {
    width: 100%;
}

.card__blur {
    width: 100%;
    height: 99%;
    border-radius: 5px;
    background: rgba(174, 174, 174, 0.1);
    backdrop-filter: blur(1.5px);
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.card__blur img {
    cursor: pointer;
    max-width: 70px;
}

.card__front-content {
    z-index: 2;
    width: 100%;
    height: 99%;
    backface-visibility: hidden;
    visibility: visible;
    -webkit-backface-visibility: hidden;
    position: relative;
    perspective: 1000px;
	-webkit-perspective: 1000px;
}

.card__back-content {
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 99%;
    background-color: #F1F0E8;
    border-radius: 5px;
    -webkit-transform: rotateY(-180deg);
    transform: rotateY(-180deg);
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 4rem 1rem;
    font-size: 1rem;
}

.card__close-arrow {
    margin-right: 2rem;
    cursor: pointer;
    align-self: flex-end;
    justify-self: end;
}

.card__back-content ul li::before {
    content: "-";
    margin-right: 1rem;
}

.card__back-content ul,
.card__back-content p {
    min-height: 270px;
}

.card.animate .card__image {
    -webkit-transform: rotateY(-180deg);
    transform: rotateY(-180deg);
}

@media (max-width: 1500px) {
    .card__back-content {
        font-size: .8rem;
    }

}

@media (max-width: 1200px) {
    .card {
        max-width: none;
        width: calc((100% - 40px) / 2);
    }

}

@media (max-width: 768px) {
    .card h2 {
        font-size: 1rem;
    }

    .card__blur img {
        cursor: pointer;
        max-width: 50px;
    }

    .card__back-content {
        font-size: 12px;
    }
}

@media (max-width: 580px) {
    .procedures__cards {
        align-items: center;
        justify-content: center;
    }

    .card {
        width: calc((100% - 20px) / 1);
        margin-bottom: 40px;
    }

    .card:last-child {
        margin-bottom: 0;
    }
}

